Add a new sample plugin to the panel. It will not be installed.
(Old svn revision: 4026)

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,19 @@
 Noteworthy updates to the xfce4 panel should be recorded here.
 
+* 2004-05-01  Jasper Huijsmans <jasper@xfce.org>
+
+Add multihead support. The user needs to set DISPLAY properly to start a new
+panel on another screen.
+
+* 2004-04-23  Jasper Huijsmans <jasper@xfce.org>
+
+Update list of module list when opening dialog: remove uninstalled modules
+(when not in use) and add newly installed ones. Based on idea of Scott Barron.
+
+* 2004-04-09  Jasper Huijsmans <jasper@xfce.org>
+
+Use a dialog to add items to the panel, instead of a submenu.
+
 * 2004-04-02  Jasper Huijsmans <jasper@xfce.org>
 
 - Reduce handle width to show only one line of dots
