russian translations update from Anthony Ivanoff
(Old svn revision: 4044)

--- a/po/ru.po
+++ b/po/ru.po
@@ -2,17 +2,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER.
 # Poul Ionkin <wizzard@nmg.lv>, 2003.
+# Anthony Ivanoff <a-i@bk.ru>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: ru\n"
 "POT-Creation-Date: 2003-11-05 17:25+0100\n"
-"PO-Revision-Date: 2003-09-03 21:35+0300\n"
-"Last-Translator: Dan Korostelev <daniel@ats.energo.ru>\n"
-"Language-Team: Russian <daniel@ats.energo.ru>\n"
+"PO-Revision-Date: 2004-06-27 05:36+0600\n"
+"Last-Translator: Anthony Ivanoff <a-i@bk.ru>\n"
+"Language-Team: Russian\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.3.1\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 #: panel/xfce_support.c:597
 msgid "Select file"
@@ -107,7 +110,7 @@ msgstr "Добавить запуск"
 
 #: panel/item.c:469
 msgid "Add new item"
-msgstr "Добавить новый объект"
+msgstr "Добавить объект"
 
 #: panel/item.c:601
 msgid "Launcher"
@@ -125,7 +128,7 @@ msgid ""
 "http://www.xfce.org\n"
 msgstr ""
 "%s, версия %s\n"
-"Часть рабочей среды XFce\n"
+"Часть рабочей среды Xfce\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:259
@@ -136,11 +139,11 @@ msgid ""
 msgstr ""
 "Ваш менеджер окон не поддерживает новые возможности, определенные на http://"
 "www.freedesktop.org. \n"
-"Возможно некоторые возможности XFce не будут правильно работать."
+"Возможно, некоторые возможности Xfce не будут правильно работать."
 
 #: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
-msgstr "/Добавить новый объект"
+msgstr "/Добавить объект"
 
 #: panel/controls.c:322 panel/panel.c:125
 msgid "/_Properties..."
@@ -156,7 +159,7 @@ msgstr "Обьект не имеет настраиваемых параметр
 
 #: panel/panel.c:121
 msgid "/XFce Panel"
-msgstr "/Панель XFce"
+msgstr "/Панель Xfce"
 
 #: panel/panel.c:126
 msgid "/_Settings manager"
@@ -164,7 +167,7 @@ msgstr "/Менеджер настроек"
 
 #: panel/panel.c:128
 msgid "/_About XFce"
-msgstr "/Об XFce"
+msgstr "/Об Xfce"
 
 #: panel/panel.c:129
 msgid "/_Help"
@@ -181,7 +184,7 @@ msgstr "/Выход"
 #: panel/panel.c:489 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
 msgid "XFce Panel"
-msgstr "Панель XFce"
+msgstr "Панель Xfce"
 
 #: panel/icons.c:73
 msgid "Default"
@@ -323,7 +326,7 @@ msgstr "Автоматически скрывать:"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
-msgstr "Настройки панели XFce"
+msgstr "Настройки панели Xfce"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
@@ -358,7 +361,7 @@ msgstr "Среда"
 
 #: plugins/clock/clock.c:61
 msgid "Thursday"
-msgstr "Черверг"
+msgstr "Четверг"
 
 #: plugins/clock/clock.c:62
 msgid "Friday"
@@ -370,51 +373,51 @@ msgstr "Суббота"
 
 #: plugins/clock/clock.c:67
 msgid "January"
-msgstr "января"
+msgstr "январь"
 
 #: plugins/clock/clock.c:68
 msgid "February"
-msgstr "февраля"
+msgstr "февраль"
 
 #: plugins/clock/clock.c:69
 msgid "March"
-msgstr "марта"
+msgstr "март"
 
 #: plugins/clock/clock.c:70
 msgid "April"
-msgstr "апреля"
+msgstr "апрель"
 
 #: plugins/clock/clock.c:71
 msgid "May"
-msgstr "мая"
+msgstr "май"
 
 #: plugins/clock/clock.c:72
 msgid "June"
-msgstr "июня"
+msgstr "июнь"
 
 #: plugins/clock/clock.c:73
 msgid "July"
-msgstr "июля"
+msgstr "июль"
 
 #: plugins/clock/clock.c:74
 msgid "August"
-msgstr "августа"
+msgstr "август"
 
 #: plugins/clock/clock.c:75
 msgid "September"
-msgstr "сентября"
+msgstr "сентябрь"
 
 #: plugins/clock/clock.c:76
 msgid "October"
-msgstr "октября"
+msgstr "октябрь"
 
 #: plugins/clock/clock.c:77
 msgid "November"
-msgstr "ноября"
+msgstr "ноябрь"
 
 #: plugins/clock/clock.c:78
 msgid "December"
-msgstr "декабря"
+msgstr "декабрь"
 
 #: plugins/clock/clock.c:350
 msgid "Clock type:"
@@ -454,7 +457,7 @@ msgstr "Показывать секунды:"
 
 #: plugins/clock/clock.c:599
 msgid "Xfce Clock"
-msgstr "Часы XFce"
+msgstr "Часы Xfce"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
@@ -528,7 +531,7 @@ msgstr "Команда:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Выполнить команду при нажатии кнопки на панели"
+msgstr "Команда, выполняемая при нажатии кнопки на панели"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
@@ -537,3 +540,4 @@ msgstr "Интервал (сек):"
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
 msgstr "Проверка почты"
+
