Rip out thread support. threads + gtk == trouble ;-)
(Old svn revision: 4104)

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@ TODO
 * smarter resize/move
   - [DONE] popup arrow direction
   - [DONE] keep panel on same x/y alignment
-  - save 'centered' state to better keep the panel aligned?
+  - [DONE] save 'centered' state to better keep the panel aligned?
 * [DONE] use icon theme spec
 * [DONE] Move the exec_cmd stuff to libxfce4util/libxfcegui4
 * [DONE] Move to glib xml parsing. More work, but more speed / 
@@ -27,7 +27,6 @@ Ideas
 -----
 * plugins:
   - dockapps support
-  - iconbox / task list
 * 2 plugins side by side 
    (like systembuttons)
 * change icon themes to use a mapping between categories and icon names that
