--- a/po/fi.po
+++ b/po/fi.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: XFCE4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-22 16:35+0200\n"
-"PO-Revision-Date: 2003-06-01 23:04+0200\n"
-"Last-Translator: Ilkka Ollakka <ilkka.j.ollakka@students.oamk.fi>\n"
+"PO-Revision-Date: 2004-08-24 23:30+0200\n"
+"Last-Translator: Ilkka Ollakka <ilkka.ollakka@iki.fi>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -20,24 +20,19 @@ msgstr "Valitse tiedosto"
 
 #: panel/settings.c:172
 msgid "No data was found. The panel will be empty."
-msgstr ""
+msgstr "Tietoja ei löytynyt, paneeli on tyhjä."
 
 #: panel/controls_dialog.c:88 panel/item_dialog.c:1200
 msgid "Position:"
 msgstr "Paikka:"
 
 #: panel/controls_dialog.c:148
-#, fuzzy
 msgid "Item properties"
-msgstr "/_Ominaisuudet..."
+msgstr "Ominaisuudet"
 
 #: panel/controls_dialog.c:200 panel/controls.c:685
-#, fuzzy
 msgid "Removing the item will also remove its popup menu."
-msgstr ""
-"Osan poista poistoo myös ponnahdusvalikon.\n"
-"\n"
-"Haluatko poistaa osan?"
+msgstr "Osan poista poistoo myös ponnahdusvalikon."
 
 #: panel/item_dialog.c:151 panel/item_dialog.c:605
 msgid "Select command"
@@ -49,11 +44,11 @@ msgstr "Komento:"
 
 #: panel/item_dialog.c:353
 msgid "Run in _terminal"
-msgstr "Aja Päätteessä"
+msgstr "Aja Päät_teessä"
 
 #: panel/item_dialog.c:372
 msgid "Use startup _notification"
-msgstr "Käytä käynnistyksen _huomautusta"
+msgstr "Käytä käyn_nistyksen huomautusta"
 
 #: panel/item_dialog.c:566
 msgid "Other Icon"
@@ -105,7 +100,7 @@ msgid "Are you sure you want to exit?"
 msgstr "Haluatko lopettaa?"
 
 #: panel/main.c:326
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "\n"
 " The Xfce Panel\n"
@@ -117,39 +112,41 @@ msgid ""
 " Licensed under the GNU GPL.\n"
 "\n"
 msgstr ""
-"%s, versio %s\n"
-"Osa Xfce-työpöytäympäristöä\n"
-"http://www.xfce.org\n"
+"\n"
+" Xfce paneeli\n"
+" Versio %s\n"
+"\n"
+" Osa Xfce työpöytäympäristöä\n"
+" http://www.xfce.org\n"
+" GNU GPL Lisenssin alla.\n"
+"\n"
 
 #: panel/main.c:395
 #, c-format
 msgid "%s: Successfully started without session management"
-msgstr ""
+msgstr "%s: Onnistuneesti käynnistetty ilman istunnonhallintaa"
 
 #: panel/main.c:400
 #, c-format
 msgid "%s: Successfully started with session management"
-msgstr ""
+msgstr "%s: Onnistuneesti käynnistetty istunnonhallinnan alaisuuteen"
 
 #: panel/controls.c:640 panel/controls.c:731
 #, c-format
 msgid "Could not create panel item \"%s\"."
-msgstr ""
+msgstr "Ei voitu luoda paneelin osaa \"%s\"."
 
 #: panel/controls.c:792 panel/panel.c:573
-#, fuzzy
 msgid "_Properties..."
-msgstr "/_Ominaisuudet..."
+msgstr "Ominaisuudet..."
 
 #: panel/controls.c:797
-#, fuzzy
 msgid "_Remove"
-msgstr "/_Poista"
+msgstr "Poista"
 
 #: panel/controls.c:806 panel/panel.c:563
-#, fuzzy
 msgid "Add _new item"
-msgstr "/_Lisää uusi osa"
+msgstr "Lisää uusi osa"
 
 #: panel/controls.c:1080
 msgid "This item has no configuration options"
@@ -161,29 +158,24 @@ msgid "Xfce Panel"
 msgstr "Xfce Paneeli"
 
 #: panel/panel.c:578
-#, fuzzy
 msgid "_About Xfce"
-msgstr "/_Tietoja Xfce:stä"
+msgstr "Tietoj_a Xfce:stä"
 
 #: panel/panel.c:583
-#, fuzzy
 msgid "_Help"
-msgstr "/A_pua"
+msgstr "Apua"
 
 #: panel/panel.c:592
-#, fuzzy
 msgid "_Lock screen"
-msgstr "/_Lukitse näyttö"
+msgstr "_Lukitse näyttö"
 
 #: panel/panel.c:597
-#, fuzzy
 msgid "_Restart"
-msgstr "P_alauta"
+msgstr "Palauta"
 
 #: panel/panel.c:606
-#, fuzzy
 msgid "E_xit"
-msgstr "/_Poistu"
+msgstr "Poistu"
 
 #: panel/icons.c:68
 msgid "Default"
@@ -259,7 +251,7 @@ msgstr "Suuri"
 
 #: settings/xfce_settings_dialog.c:109
 msgid "Huge"
-msgstr ""
+msgstr "Todella suuri"
 
 #: settings/xfce_settings_dialog.c:189
 msgid "Horizontal"
@@ -299,7 +291,7 @@ msgstr "Ponnahdusvalikoiden sijainti:"
 
 #: settings/xfce_settings_dialog.c:349
 msgid "Always on top:"
-msgstr ""
+msgstr "Aina päälinmäisenä:"
 
 #: settings/xfce_settings_dialog.c:401
 msgid "Autohide:"
@@ -327,7 +319,7 @@ msgstr "Käytös"
 #.
 #: plugins/clock/clock.c:202
 msgid "%A, %d %B %Y"
-msgstr ""
+msgstr "%A, %d %B %Y"
 
 #: plugins/clock/clock.c:423
 msgid "Clock type:"
@@ -371,11 +363,11 @@ msgstr "Xfce Kello"
 
 #: plugins/pager/pager.c:309
 msgid "Number of rows:"
-msgstr ""
+msgstr "Rivien lukumäärä:"
 
 #: plugins/pager/pager.c:311
 msgid "Number of columns:"
-msgstr ""
+msgstr "Sarakkeiden lukumäärä:"
 
 #: plugins/pager/pager.c:355
 msgid "Graphical pager"
@@ -444,14 +436,12 @@ msgid "Mail box:"
 msgstr "Postilaatikko:"
 
 #: plugins/mailcheck/mailcheck.c:825
-#, fuzzy
 msgid "New mail command:"
-msgstr "Postikomento:"
+msgstr "Postin tarkistuskomento::"
 
 #: plugins/mailcheck/mailcheck.c:839
-#, fuzzy
 msgid "Command to run when new mail arrives"
-msgstr "Komento joka ajetaan kun kuvaketta painetaan"
+msgstr "Komento joka ajetaan kun uutta postia havaitaan"
 
 #: plugins/mailcheck/mailcheck.c:869
 msgid "Command to run when the button on the panel is clicked"
@@ -462,9 +452,8 @@ msgid "Interval (sec):"
 msgstr "Väli (sekuntia):"
 
 #: plugins/mailcheck/mailcheck.c:963
-#, fuzzy
 msgid "Mail checker"
-msgstr "Postin tarkistus"
+msgstr "Postin tarkistin"
 
 #~ msgid "Change item"
 #~ msgstr "Muuta osaa"
